# themis

./: LICENSE  README.md  cabal.project  tasker.cabal  themis.cabal
doc/: config  configuration.md
example/: config
src/: Attr.hs  Config.hs  Cursor.hs  FileIO.hs  Main.hs  Task.hs  Tui.hs
