cabal-version:          >=1.10

name:                   themis
version:                0.0.3.1
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:           LICENSE
author:                 einzigartigerName
maintainer:             nelson.gillo@gmx.de
-- copyright:
-- category:
build-type:             Simple
-- extra-source-files:     CHANGELOG.md

executable todo
    main-is:            Main.hs
    ghc-options:        -Wall -Wextra -threaded
    other-modules:      Attr
                        , Config
                        , FileIO
                        , Tui
                        , Task

    build-depends:      base >=4.13 && <4.14
                        , brick
                        , config-ini
                        , directory
                        , microlens
                        , microlens-th
                        , text
                        , vty
                        , vector

    hs-source-dirs:     src/
    default-language:   Haskell2010
